Fix views linking from folder name change

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('../../views/partial/head'); %>
+<%- include('../../views/_partial/head'); %>
 <body class="container">
 
-<%- include('../../views/partial/header'); %>
+<%- include('../../views/_partial/header'); %>
 
 <main>
   <div class="jumbotron">
@@ -12,7 +12,7 @@
   </div>
 </main>
 
-<%- include('../../views/partial/footer'); %>
+<%- include('../../views/_partial/footer'); %>
 
 </body>
 </html>
