reorganize the the including of partials

--- a/views/_partial/header.ejs
+++ b/views/_partial/header.ejs
@@ -1,3 +1,4 @@
+<%- include('../../views/_partial/head'); %>
 <header>
     <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
@@ -7,6 +8,8 @@
                     <li><a href="/home">Home</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/connect">Connect</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/signup">Sign Up</a></li>
                 </ul>
             </div>
         </div>
